<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/subdiv_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/subdiv" />

        <TextView
            android:id="@+id/main_login_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:gravity="center"
            android:text="@string/login_txt"
            android:textColor="#ff0000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp64"
            android:layout_marginStart="@dimen/dp64"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/login_user_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp80"
                android:layout_marginStart="@dimen/dp80"
                android:text="@string/login_user_txt"
                android:textColor="@color/spinner_label"
                android:textSize="@dimen/text14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/black" />

            <Spinner
                android:id="@+id/login_users_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp64"
            android:layout_marginStart="@dimen/dp64"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_user_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp80"
                android:layout_marginStart="@dimen/dp80"
                android:text="@string/login_user_txt"
                android:textAlignment="center"
                android:textColor="@color/spinner_label"
                android:textSize="@dimen/text14"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/black" />

            <Spinner
                android:id="@+id/login_users_spin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp64"
            android:layout_marginStart="@dimen/dp64"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/login_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Testing App"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp32"
                android:text="@string/login_btn"
                android:textColor="#f8f8ff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/company_details_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp12"
                android:gravity="center"
                android:text="@string/company_details"
                android:textColor="@color/company_details_color"
                android:textSize="@dimen/text12" />

            <TextView
                android:id="@+id/text_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#ff0000"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
